--- a/package.json
+++ b/package.json
@@ -74,16 +74,22 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.3",
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/bun": "^1.2.21",
+    "@types/node": "^22.15.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prettier": "3.5.3",
     "tailwindcss": "^4.1.9",
+    "tsup": "8.3.5",
     "turbo": "^2.3.3",
     "tw-animate-css": "1.3.3",
     "typescript": "^5.6.3",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "whatwg-url": "7.1.0"
   }
 }
